[gd_scene load_steps=4 format=3 uid="uid://1l48g2fcdhc4"]

[ext_resource type="Script" path="res://ui/menus/death_menu.gd" id="1_llixi"]
[ext_resource type="Script" path="res://ui/elements/tbutton.gd" id="3_tbqrt"]
[ext_resource type="Texture2D" uid="uid://c1v68fqkb36nt" path="res://gfx/ui/menues/main_menu.png" id="4_5cjqs"]

[node name="DeathMenu" type="Control"]
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_llixi")

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="Main Menu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Images" type="Control" parent="UI/Main Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="UI/Main Menu/Images"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.298
anchor_right = 1.0
anchor_bottom = 1.343
offset_top = -0.359997
offset_bottom = 2.25999
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_5cjqs")
expand_mode = 1

[node name="Labels" type="Control" parent="UI/Main Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="YouDiedLabel" type="RichTextLabel" parent="UI/Main Menu/Labels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 8.0
offset_right = 80.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 15
text = "YOU LOST YOUR KING"

[node name="RoomsClearedLabel" type="RichTextLabel" parent="UI/Main Menu/Labels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 41.0
offset_right = 128.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 12
text = "Rooms Cleared:"

[node name="BestScoreLabel" type="RichTextLabel" parent="UI/Main Menu/Labels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 61.0
offset_right = 128.0
offset_bottom = 99.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "- [color=yellow] NEW BEST!!! [/color] -"

[node name="Buttons" type="Control" parent="UI/Main Menu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 7.79
offset_right = 176.645
offset_bottom = 134.66
grow_vertical = 2

[node name="MainMenuButton" type="TextureButton" parent="UI/Main Menu/Buttons"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.20946
anchor_top = -0.0692835
anchor_right = 0.20946
anchor_bottom = -0.0692835
offset_right = 71.0
offset_bottom = 27.0
script = ExtResource("3_tbqrt")
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="Label" type="RichTextLabel" parent="UI/Main Menu/Buttons/MainMenuButton"]
layout_mode = 0
offset_left = 3.0
offset_top = 6.0
offset_right = 81.0
offset_bottom = 24.0
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 12
text = "Main Menu"

[node name="QuitButton" type="TextureButton" parent="UI/Main Menu/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00566107
anchor_top = -0.148104
anchor_right = -0.00566107
anchor_bottom = -0.148104
offset_left = 41.0
offset_top = 37.0
offset_right = 97.0
offset_bottom = 64.0
script = ExtResource("3_tbqrt")
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="UI/Main Menu/Buttons/QuitButton"]
layout_mode = 0
offset_right = 253.0
offset_bottom = 31.0
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 12
text = "Quit"
metadata/_edit_lock_ = true

[node name="FadeRectangle" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="UI/Main Menu/Buttons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="UI/Main Menu/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
